--- a/demo/tsconfig.tns.json
+++ b/demo/tsconfig.tns.json
@@ -11,6 +11,9 @@
       "*": [
           "./node_modules/tns-core-modules/*",
           "./node_modules/*"
+      ],
+      "nativescript-remote-ngrx-devtools": [
+        "../src/index.ts"
       ]
     }
   }
