--- a/src/package.json
+++ b/src/package.json
@@ -55,7 +55,11 @@
     "dependencies": {
         "@angular/core": "^7.1.4",
         "@ngrx/store-devtools": "^7.0.0",
-        "remotedev": "^0.2.9"
+        "remotedev": "^0.2.9",
+        "nativescript-websockets": "^1.5.3",
+        "socketcluster-client": "^14.2.1",
+        "@types/socketcluster": "^14.0.0",
+        "@types/socketcluster-client": "^13.0.0"
     },
     "bootstrapper": "nativescript-plugin-seed"
 }
